- rpmdrake:
  o make sure searches with no results clear package list (#34898)
  o show 'Group' in details (usefull for search results, #39244)
  o stop packaging rpmdrake-remove (#39485)
  o update GUI package list
 
Version 4.11 - 1 July 2008, Thierry Vignaud

- rpmdrake:
  o always create a search category in tree (#29164)
  o open the search results category once searching is done

Version 4.10 - 24 June 2008, Thierry Vignaud

- MandrivaUpdate: show type of update in mandrivaupdate (fix,
  security, ...) [spec 216]
- rpmdrake:
  o update GUI package list

Version 4.9.16 - 16 June 2008, Thierry Vignaud

- rpmdrake:
  o fix crash in URPM with non standard package names (#41002)
- MandrivaUpdate (#40235):
  o laptop mode (height not bigger than 480): fix test

Version 4.9.15 - 23 May 2008, Thierry Vignaud

- rpmdrake:
  o list basesystem-* as meta-task too
- MandrivaUpdate (#40235):
  o laptop mode (height not bigger than 480):
    * do not display banner
    * reduce Trees' height

Version 4.9.14 - 8 May 2008, Thierry Vignaud

- display URLs of packages (#40571)
- handle gracefully locked RPM DB when trying to install some packages
  (#40244)
- warn only once about priority upgrades (#39737)
- MandrivaUpdate:
  o provide --no-splash option in order to skip splash screen when run
    from mdkapplet (#40366)
- rpmdrake:
  o GUI packages view:
    * adapt to KDE3 moving into /opt
    * include KDE applets into GUI packages view (#40073)
    * update list
  o do not list backports as unselected updates media in rpmdrake, not
    just in MandrivaUpdate (#35009, #40556)
  o fix a crash when default view is unknown (#39626)
  o fix searching when numeric pad's return key is pressed (#40659)

Version 4.9.13 - 3 April 2008, Thierry Vignaud

- updated translations

Version 4.9.12 - 1 April 2008, Thierry Vignaud

- better error message while downloading mirror list (#39675)
- rpmdrake:
  o fix view tooltip (#39694)