@@ -1,5 +1,6 @@
 - rpmdrake:
   o make sure searches with no results clear package list (#34898)
+  o save & restore window size (#25932)
   o show 'Group' in details (usefull for search results, #39244)
   o stop packaging rpmdrake-remove (#39485)
   o update GUI package list
